<resources>
    <string name="app_name">SmartCircle</string>
    <string name="login">注册</string>
    <string name="login_f">指纹登陆</string>
    <string name="login_rest">重置</string>
    <string name="dialog_fingerprint_entry">请录入指纹</string>
    <string name="dialog_test_entry">请开始测试</string>
    <string name="register_title">Entry information</string>
    <string name="register_name">Name : </string>
    <string name="register_sex">Sex : </string>
    <string name="register_age">Age : </string>
    <string name="register_tall">Tall : </string>
    <string name="register_name_hint">Entry name</string>
    <string name="register_age_hint">Entry age</string>
    <string name="register_sex_man">man</string>
    <string name="register_sex_woman">woman</string>
    <string name="ensure">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="register_tall_hint">Entry tall</string>
    <string name="dialog_name_null">Name cannot be empty</string>
    <string name="toast_success">Success</string>
    <string name="info_title_time">Time</string>
    <string name="info_title_weight">Weight</string>
    <string name="info_title_fat">Fat</string>
    <string name="info_title_rate">Heart</string>
    <string name="info_title_blood">Blood</string>
    <string name="info_title_temp">Temperature</string>
</resources>
