<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <LinearLayout
        android:id="@+id/ll_top1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_get_blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="获取血压"
            />
        <Button
            android:id="@+id/btn_get_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="获取心率"
            />
        <Button
            android:id="@+id/btn_get_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="获取温度"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_top1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<Button
    android:id="@+id/btn_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    />
    <Button
        android:id="@+id/btn_login_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_f"
        />
    <Button
        android:id="@+id/btn_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="标定"
        />
        <Button
            android:id="@+id/btn_rest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_rest"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_top"
        android:visibility="gone"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textSize="20sp"
                android:textColor="#000"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/ll_info">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_name"
                android:textSize="17sp"/>
            <EditText
                android:id="@+id/et_name"
                android:maxLength="4"
                android:inputType="text"
                android:hint="@string/register_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_sex"
                android:textSize="17sp"/>
            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <RadioButton
                    android:id="@+id/man"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_sex_man"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/women"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_sex_woman"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/ll_one">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_age"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/tv_choice_age"
                android:layout_marginStart="10dp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/register_age_hint"
                android:textSize="17sp"/>
            <TextView
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tall"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/tv_choice_tall"
                android:layout_marginStart="10dp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/register_tall_hint"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_below="@id/ll_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                />
            <Button
                android:id="@+id/btn_ensure"
                android:layout_marginStart="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ensure"
                />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>