<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_info_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_time"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_info_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_weight"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_info_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_fat"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_info_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_rate"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_info_blood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_blood"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_info_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_temp"
                android:textSize="17sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>